--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,15 @@ mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.4
 packaging==24.2
+pandas==2.2.3
 pillow==11.2.1
 pygame==2.6.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytz==2025.2
 setuptools==78.0.2
 six==1.17.0
 sympy==1.13.1
 torch==2.6.0
 typing_extensions==4.12.2
+tzdata==2025.2
